# internal/views/session/info/get/session_info_get.go
@@ -2,7 +2,6 @@ package sessioninfoget
 
 import (
 	"context"
-	_ "embed"
 	"fmt"
 	"log/slog"
 	"strings"
@@ -11,36 +10,24 @@ import (
 	"github.com/jolfzverb/pwstore/internal/dependencies"
 )
 
-//go:embed queries/select_session_by_token.sql
-var selectSessionByTokenSQL string
-
-type sessionInfo struct {
-	sessionID string
-}
-
 func GetSessionInfo(
 	ctx context.Context,
 	deps dependencies.Collection,
 	request api.GetSessionInfoRequestObject,
 ) (api.GetSessionInfoResponseObject, error) {
-	stmt, err := deps.DB.PrepareContext(ctx, selectSessionByTokenSQL)
-	if err != nil {
-		return nil, fmt.Errorf("failed to prepare statement: %w", err)
-	}
-	defer stmt.Close()
-
 	splitToken := strings.Split(request.Params.Authorization, "Bearer ")
 	if len(splitToken) != 1 || len(splitToken[0]) == 0 {
 		slog.Warn("Invalid token format")
 		return api.GetSessionInfo400Response{}, nil
 	}
 
-	var session sessionInfo
-	err = stmt.QueryRowContext(ctx, splitToken[0]).Scan(&session.sessionID)
+	session, err := deps.SessionsStorage.SelectSession(ctx, request.Body.SessionId, splitToken[0])
 	if err != nil {
-		return nil, fmt.Errorf("failed to execute query: %w", err)
+		return nil, fmt.Errorf("failed to get session: %w", err)
 	}
 
-	response := api.GetSessionInfo200JSONResponse{}
+	response := api.GetSessionInfo200JSONResponse{
+		Email: session.Email,
+	}
 	return response, nil
 }
